rdsone-ui/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdsone-ui-deployment
  namespace: rdsone-ui
  labels:
    app: rdsone-ui
spec:
  selector:
    matchLabels:
      app: rdsone-ui
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: rdsone-ui
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: rdsone-ui
      containers:
      - name: rdsone-ui
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        image: nicolasm2/rdsone-ui:latest
        ports:
        - name: serviceport
          containerPort: 8080
#        envFrom:
#         - configMapRef:
#              name: rdsone-ui-configmap
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 250m
            memory: 512Mi
      #  readinessProbe:
      #    httpGet:
      #      path: /
      #      port: serviceport
            # httpHeaders:
            #  - name: Authorization
            #    value:
      #    initialDelaySeconds: 5
      #    periodSeconds: 5
      #    timeoutSeconds: 30
      #  livenessProbe:
      #    httpGet:
      #      path: /
      #      port: serviceport
            # httpHeaders:
            #  - name: Authorization
            #    value:
      #    initialDelaySeconds: 30
      #    periodSeconds: 5
      #    timeoutSeconds: 30
      #    failureThreshold: 5
