rdsone-ui/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rdsone-ui-service
  namespace: rdsone-ui
  labels:
    app: rdsone-ui-service
spec:
  type: ClusterIP
  selector:
    app: rdsone-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
